test/trivial/deitz/vars-scopes/infer1.good
infer1.chpl:1: In function 'main':
infer1.chpl:2: error: 'x' is not initialized and has no type
infer1.chpl:2: note: cannot find initialization point to split-init this variable
infer1.chpl:3: note: 'x' is used here before it is initialized
